--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                         <p id="texto">Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
 
                         <p class="caixa">
-                            <label for="iemail"><span id="person"  class="material-icons">person</span></label> <input type="email" name="nome" id="iemail" placeholder="  seu e-mail" required size="20" autocomplete="email">
+                            <label for=""><span id="person"  class="material-icons">person</span></label> <input type="email" name="nome" id="iemail" placeholder="  seu e-mail" required size="20" autocomplete="email">
                          </p>
 
                         <p class="caixa">
-                            <label for="isenha"><span id="key" class="material-icons">key</span></label><input type="password" name="senha" id="isenha" placeholder="  sua senha" required minlength="8" size="20">
+                            <label for=""><span id="key" class="material-icons">key</span></label><input type="password" name="senha" id="isenha" placeholder="  sua senha" required minlength="8" size="20">
                         </p>
                         <p id="pentrar"><input id="entrar" type="submit" value="Entrar"></p>
                         <a href="esqueci.html" class="botao"> Esqueci a senha <span id="mail" class="material-icons">mail</span></a> 
