--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
                         <caption><h1>Login</h1></caption>
 
                         <p id="texto">Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+
+                        <div id="container">
                             <p class="caixa">
                                 <label for="iemail"><span id="person"  class="material-icons">person</span></label><input type="email" name="nome" id="iemail" placeholder="  seu e-mail" required size="14" autocomplete="email">
                              </p>
                             <p class="caixa">
                                 <label for="isenha"><span id="key" class="material-icons">key</span></label><input type="password" name="senha" id="isenha" placeholder="  sua senha" required minlength="8" size="14">
                             </p>
+                        </div>
                         <p id="pentrar"><input id="entrar" type="submit" value="Entrar"></p>
                         <a href="esqueci.html" class="botao"> Esqueci a senha <span id="mail" class="material-icons">mail</span></a> 
                 
