--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/tablet.css" media="(min-width:768px)">
+    <link rel="stylesheet" href="desktop.css" media="(min-width:992px)">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <title>Login</title>
 </head>
 <body>
     <main>
         <section>
-                <fieldset>
+            <fieldset>
                     <div id="imagem"></div>
                     <form action="cadastro.php" method="post" autocomplete="on">
                         <caption><h1>Login</h1></caption>
